# datadog-users-management

./: .gitignore  README.md  pyproject.toml
user_management/: datadog_users.json  handler.py  test.json
user_management/datadog_users/: admin_users.py  manage_datadog_users.py
user_management/slack_users/: get_slack_users.py  user.py
